[package]
name = "knock"
version = "0.1.0"
authors = ["Ewerton Carlos Assis <earaujoassis@gmail.com>"]
description = "Knock-knock is a really tiny dynamic DNS (DDNS) client"
repository = "https://github.com/earaujoassis/knock-knock"
readme = "README.md"
categories = ["network-programming", "DDNS"]
license = "MIT"

[dependencies]
r2d2 = "^0.8.2"
r2d2-diesel = "^1.0.0"
diesel = { version = "^1.3.3", features = ["mysql", "r2d2", "chrono"] }
dotenv = "^0.12.0"
router = "^0.6.0"
chrono = { version = "^0.4.6", features = ["serde", "rustc-serialize"] }
serde = "^1.0.80"
serde_json = "^1.0.32"
serde_derive = "^1.0.80"
slog = "^2.4.1"
slog-term = "^2.4.0"
slog-json = "^2.2.0"
base64 = "^0.10.0"

[dependencies.iron]
version = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[[bin]]
name = "knock"
path = "src/main.rs"
