[package]
name = "dike"
version = "0.1.0"
authors = ["Ewerton Carlos Assis <earaujoassis@gmail.com>"]
description = "Dike server is a really tiny dynamic DNS (DDNS) client"
repository = "https://github.com/earaujoassis/dike-server"
readme = "README.md"
categories = ["network-programming", "DDNS"]
license = "MIT"

[dependencies]
r2d2 = "^0.8.2"
r2d2-diesel = "^1.0.0"
diesel = { version = "^1.3.3", features = ["mysql", "r2d2", "chrono"] }
diesel_cli = { version = "^1.3.1", features = ["mysql"] }
diesel_migrations = { version = "^1.3.0", features = ["mysql"] }
dotenv = "^0.12.0"
router = "^0.6.0"
chrono = { version = "^0.4.6", features = ["serde", "rustc-serialize"] }
serde = "^1.0.80"
serde_json = "^1.0.32"
serde_derive = "^1.0.80"
slog = "^2.4.1"
slog-term = "^2.4.0"
slog-json = "^2.2.0"
base64 = "^0.10.0"
actix-web = "0.7"
reqwest = "0.9.9"

[[bin]]
name = "dike"
path = "src/main.rs"
